Replaced manual validation with the javax validation api
Signed-off-by: Peter Veres <tllvllp@gmail.com>